//Vorschläge sind willkommen =)

//DO TO: Die Implementierung des UML Diagramm für die Parkingspace.


@startuml
'https://plantuml.com/class-diagram

abstract Parkingspace{

   +ishandicap:boolean

   Parkingspace()
   Parkingspace(boolean value)

}

class Handicapparkingspace{

   Handicapparkingspace()

}

class Firmenparkingspace{

    Firmenparkingspace()
}

class Tagesparkingspace{

    Tagesparkingspace()
}

class Familienparkingspace{

    Familienparkingspace()
}

class Frauenparkingspace{

   Frauenparkingspace()

}



Parkingspace<|--Handicapparkingspace
Parkingspace<|--Firmenparkingspace
Parkingspace<|--Tagesparkingspace
Parkingspace<|--Familienparkingspace
Parkingspace<|--Frauenparkingspace


@enduml
